20250108の日報作成

--- a/2025/01/08.md
+++ b/2025/01/08.md
@@ -1,14 +1,14 @@
 # 取り組んだ課題一覧
-- GitHubと日報の連携
 - 米国AI開発者がゼロから教えるPython入門講座
-  - 11まで
+  - 12 ~ 21まで
 # わかったこと
-- GitHubと日報の連携方法
-- Pycharmのセットアップ
-- 文字列
+- 異なる変数名に同じ文字列を入れても使われる`id`は同じ
+- booleanはintegerのサブタイプ
+  - `1`が真で`0`が偽
+  - `True` + `True`をすると`2`が返ってくる
 # 次やること
 - 米国AI開発者がゼロから教えるPython入門講座
 # 感じたこと
-- Pythonは基礎の部分なので、分かる範囲は飛ばしながらやっていきたい
+- あくまでもメモリ内に入っているのを使いまわしている感覚がなんとなくわかった
 # 学習時間
-- 1.5h
+- 1h
